# docs/swagger.json
@@ -678,6 +678,99 @@
                 }
             }
         },
+        "/races/get_user_race_result/:user_id": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get a list of result by user id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "race"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/dto.UserRaceResultResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/races/leaderboard": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get a list of the best wpm results",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "race"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/dto.UserRaceResultResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/races/{id}": {
             "get": {
                 "security": [
@@ -1801,17 +1894,16 @@
             "required": [
                 "accuracy",
                 "duration",
-                "race_id",
                 "user_id",
                 "wpm"
             ],
             "properties": {
                 "accuracy": {
-                    "type": "integer",
+                    "type": "number",
                     "maximum": 100
                 },
                 "duration": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "race_id": {
                     "type": "integer"
@@ -1820,7 +1912,7 @@
                     "type": "integer"
                 },
                 "wpm": {
-                    "type": "integer"
+                    "type": "number"
                 }
             }
         },
@@ -1828,10 +1920,13 @@
             "type": "object",
             "properties": {
                 "accuracy": {
-                    "type": "integer"
+                    "type": "number"
+                },
+                "created_at": {
+                    "type": "string"
                 },
                 "duration": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "id": {
                     "type": "integer"
@@ -1843,7 +1938,7 @@
                     "type": "integer"
                 },
                 "wpm": {
-                    "type": "integer"
+                    "type": "number"
                 }
             }
         },
